Mineral Sticks Added

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -8,6 +8,11 @@
   "item.destriummod.destrium_nuggets": "Destrium Nuggets",
   "item.destriummod.argonide_ingot": "Argonide Ingot",
   "item.destriummod.argonide_nuggets": "Argonide Nuggets",
+  
+  
+  "item.destriummod.amazonite_stick": "Amazonite Stick",
+  "item.destriummod.destrium_stick": "Amazonite Stick",
+  "item.destriummod.argonide_stick": "Argonide Stick",
     
   
   "item.destriummod.amazonite_sword": "Amazonite Sword",
