--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -10,6 +10,11 @@
   "item.destriummod.argonide_nuggets": "PÃ©pite D' Argonide",
   
   
+  "item.destriummod.amazonite_stick": "Stick En Amazonite",
+  "item.destriummod.destrium_stick": "Stick En Destrium",
+  "item.destriummod.argonide_stick": "Stick En Argonide",
+  
+  
   "item.destriummod.amazonite_sword": "Epée En Amazonite",
   "item.destriummod.amazonite_pickaxe": "Pioche En Amazonite",
   "item.destriummod.amazonite_axe": "Hache En Amazonite",
