--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -33,6 +33,8 @@
   "item.destriummod.argonide_shovel": "Pelle En Argonide",
   "item.destriummod.argonide_hoes": "Houe En Argonide",
   
+  "item.destriummod.spawners_pickaxe": "Pioche Pour Spawners",
+  
   
   "item.destriummod.amazonite_helmet": "Casque En Amazonite",
   "item.destriummod.amazonite_chestplate": "Plastron En Amazonite",
