Destrium Stick Name Modification

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -11,7 +11,7 @@
   
   
   "item.destriummod.amazonite_stick": "Amazonite Stick",
-  "item.destriummod.destrium_stick": "Amazonite Stick",
+  "item.destriummod.destrium_stick": "Destrium Stick",
   "item.destriummod.argonide_stick": "Argonide Stick",
     
   
