Dirt Compressed Added

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -87,6 +87,12 @@
   "block.destriummod.cobblestone_compressed7": "Stone Compressed Seven Times",
   "block.destriummod.cobblestone_compressed8": "Stone Compressed Eight Times",
   
+  "block.destriummod.dirt_compressed1": "Dirt Compressed",
+  "block.destriummod.dirt_compressed2": "Dirt Compressed Two Times",
+  "block.destriummod.dirt_compressed3": "Dirt Compressed Three Times",
+  "block.destriummod.dirt_compressed4": "Dirt Compressed Four Times",
+  "block.destriummod.dirt_compressed5": "Dirt Compressed Five Times",
+  
   
   "block.destriummod.cloud": "Cloud",
   "block.destriummod.black_cloud": "Black Cloud",
