--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -87,6 +87,12 @@
   "block.destriummod.cobblestone_compressed7": "Pierre Taillé Compressé Sept Fois",
   "block.destriummod.cobblestone_compressed8": "Pierre Taillé Compressé Huit Fois",
   
+  "block.destriummod.dirt_compressed1": "Terre Compressé",
+  "block.destriummod.dirt_compressed2": "Terre Compressé Deux Fois",
+  "block.destriummod.dirt_compressed3": "Terre Compressé Trois Fois",
+  "block.destriummod.dirt_compressed4": "Terre Compressé Quatre Fois",
+  "block.destriummod.dirt_compressed5": "Terre Compressé Cinq Fois",
+  
   
   "block.destriummod.cloud": "Nuage",
   "block.destriummod.black_cloud": "Nuage Noire",
