GoldenCore And CompressedGolden Description Added

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -166,6 +166,9 @@
   "item.destriummod.destrium_stick.desc": "Used to craft the Destrium Tools",
   "item.destriummod.argonide_stick.desc": "Used to craft the Argonide Tools",
   
+  "item.destriummod.golden_core.desc": "Used to craft the Noth Apple",
+  "item.destriummod.compressed_golden.desc": "Used to craft the Golden Core",
+  
   
   "item.destriummod.destrium_apple.desc": "Ten Heart Healing",
   "item.destriummod.destrium_apple.desc2": "Strength Three For Twenty Seconds",
