--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -162,6 +162,9 @@
   "item.destriummod.amazonite_stick.desc": "Utilisé pour craft les Outils En Amazonite",
   "item.destriummod.destrium_stick.desc": "Utilisé pour craft les Outils En Destrium",
   "item.destriummod.argonide_stick.desc": "Utilisé pour craft les Outils En Argonide",
+  
+  "item.destriummod.golden_core.desc": "Utilisé pour craft la Pomme de Notch",
+  "item.destriummod.compressed_golden.desc": "Utilisé pour craft le Noyau En Or",
 
 
   "item.destriummod.destrium_apple.desc": "Heal De Dix Coeurs",
