--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -121,6 +121,10 @@
   "block.destriummod.cracked_cloud": "Nuage Craquelé",
   
   
+  "block.destriummod.below_block": "Bloc De l'En Dessous",
+  
+  
+  
   
   "itemGroup.destriummod.blocktab": "Onglets Des Blocks",
   "itemGroup.destriummod.itemtab": "Onglets Des Items",
