Amazonite Relique Block Added

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -134,6 +134,9 @@
   "block.destriummod.xp_plants": "Xp Plants",
   
   
+  "block.destriummod.amazonite_relique_block": "Amazonite Relique Block",
+  
+  
   "block.destriummod.below_block": "Below Block",
   
   
