--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -129,6 +129,9 @@
   "block.destriummod.cracked_cloud": "Nuage Craquelé",
   
   
+  "block.destriummod.amazonite_relique_block": "Bloc De Relique En Amazonite",
+  
+  
   "block.destriummod.below_block": "Bloc De l'En Dessous",
   
   
