--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -86,14 +86,14 @@
   "block.destriummod.cracked_argonide_ore": "Cracked Argonide Ore",
   
   
-  "block.destriummod.cobblestone_compressed1": "Stone Compressed",
-  "block.destriummod.cobblestone_compressed2": "Stone Compressed Two Times",
-  "block.destriummod.cobblestone_compressed3": "Stone Compressed Three Times",
-  "block.destriummod.cobblestone_compressed4": "Stone Compressed Four Times",
-  "block.destriummod.cobblestone_compressed5": "Stone Compressed Five Times",
-  "block.destriummod.cobblestone_compressed6": "Stone Compressed Six Times",
-  "block.destriummod.cobblestone_compressed7": "Stone Compressed Seven Times",
-  "block.destriummod.cobblestone_compressed8": "Stone Compressed Eight Times",
+  "block.destriummod.cobblestone_compressed1": "Compressed CobbleStone",
+  "block.destriummod.cobblestone_compressed2": "Compressed CobbleStone Two Times",
+  "block.destriummod.cobblestone_compressed3": "Compressed CobbleStone Three Times",
+  "block.destriummod.cobblestone_compressed4": "Compressed CobbleStone Four Times",
+  "block.destriummod.cobblestone_compressed5": "Compressed CobbleStone Five Times",
+  "block.destriummod.cobblestone_compressed6": "Compressed CobbleStone Six Times",
+  "block.destriummod.cobblestone_compressed7": "Compressed CobbleStone Seven Times",
+  "block.destriummod.cobblestone_compressed8": "Compressed CobbleStone Eight Times",
   
   "block.destriummod.dirt_compressed1": "Dirt Compressed",
   "block.destriummod.dirt_compressed2": "Dirt Compressed Two Times",
