Amazonite Sword Name Fr Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -15,7 +15,7 @@
   "item.destriummod.argonide_stick": "Stick En Argonide",
   
   
-  "item.destriummod.amazonite_sword": "Epée En Amazonite",
+  "item.destriummod.amazonite_sword": "EpÃ©e En Amazonite",
   "item.destriummod.amazonite_pickaxe": "Pioche En Amazonite",
   "item.destriummod.amazonite_axe": "Hache En Amazonite",
   "item.destriummod.amazonite_shovel": "Pelle En Amazonite",
