Destrium Sword Name Fr Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -21,7 +21,7 @@
   "item.destriummod.amazonite_shovel": "Pelle En Amazonite",
   "item.destriummod.amazonite_hoes": "Houe En Amazonite",
   
-  "item.destriummod.destrium_sword": "Epée En Destrium",
+  "item.destriummod.destrium_sword": "EpÃ©e En Destrium",
   "item.destriummod.destrium_pickaxe": "Pioche En Destrium",
   "item.destriummod.destrium_axe": "Hache En Destrium",
   "item.destriummod.destrium_shovel": "Pelle En Destrium",
