Xp Seeds And Destrium Seeds Name Fr Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -58,7 +58,7 @@
   
   "item.destriummod.amazonite_seeds": "Graine D' Amazonite",
   "item.destriummod.destrium_seeds": "Graine De Destrium",
-  "item.destriummod.destrium_seeds": "Graine D' Xp",  
+  "item.destriummod.xp_seeds": "Graine D' Xp",  
   
   
   "item.destriummod.golden_core": "Noyau En Or",
