Amazonite Crumb Name Fr Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -3,7 +3,7 @@
   "item.destriummod.amazonite_nuggets": "Pépite D' Amazonite",
   "item.destriummod.amazonite_fragment": "Fragment D' Amazonite",
   "item.destriummod.amazonite_dust": "Poudre D' Amazonite",
-  "item.destriummod.amazonite_crumb": "Miette D' Amazonite",
+  "item.destriummod.amazonite_crumb": "Miette d'Amazonite",
   "item.destriummod.destrium_ingot": "Lingot De Destrium",
   "item.destriummod.destrium_nuggets": "Pépite De Destrium",
   "item.destriummod.argonide_ingot": "Lingot D' Argonide",
