Amazonite Dust Name Fr Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -2,7 +2,7 @@
   "item.destriummod.amazonite_ingot": "Lingot D' Amazonite",
   "item.destriummod.amazonite_nuggets": "Pépite D' Amazonite",
   "item.destriummod.amazonite_fragment": "Fragment D' Amazonite",
-  "item.destriummod.amazonite_dust": "Poudre D' Amazonite",
+  "item.destriummod.amazonite_dust": "Poudre d'Amazonite",
   "item.destriummod.amazonite_crumb": "Miette d'Amazonite",
   "item.destriummod.destrium_ingot": "Lingot De Destrium",
   "item.destriummod.destrium_nuggets": "Pépite De Destrium",
