Amazonite Nuggets Name Fr Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -1,6 +1,6 @@
 {
   "item.destriummod.amazonite_ingot": "Lingot D' Amazonite",
-  "item.destriummod.amazonite_nuggets": "Pépite D' Amazonite",
+  "item.destriummod.amazonite_nuggets": "Pépite d'Amazonite",
   "item.destriummod.amazonite_fragment": "Fragment d'Amazonite",
   "item.destriummod.amazonite_dust": "Poudre d'Amazonite",
   "item.destriummod.amazonite_crumb": "Miette d'Amazonite",
