Amazonite Ingot Name Fr Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -1,5 +1,5 @@
 {
-  "item.destriummod.amazonite_ingot": "Lingot D' Amazonite",
+  "item.destriummod.amazonite_ingot": "Lingot d'Amazonite",
   "item.destriummod.amazonite_nuggets": "Pépite d'Amazonite",
   "item.destriummod.amazonite_fragment": "Fragment d'Amazonite",
   "item.destriummod.amazonite_dust": "Poudre d'Amazonite",
