Amazonite Block Name Fr Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -74,7 +74,7 @@
   
   
   
-  "block.destriummod.amazonite_block": "Bloc D'amazonite",
+  "block.destriummod.amazonite_block": "Bloc d'Amazonite",
   "block.destriummod.fake_amazonite_block": "Bloc D'amazonite",
   "block.destriummod.destrium_block": "Bloc De Destrium",
   "block.destriummod.argonide_block": "Bloc D'Argonide",
