Amazonite Dust Description Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -165,7 +165,7 @@
   "item.destriummod.destrium_ingot.desc3": "Argonide",
   "item.destriummod.destrium_nuggets.desc": "Utilisé pour craft le Lingot De Destrium",
   "item.destriummod.amazonite_crumb.desc": "Utilisé pour craft le Poudre d'Amazonite",
-  "item.destriummod.amazonite_dust.desc": "Utilisé pour craft le Fragment D' Amazonite",
+  "item.destriummod.amazonite_dust.desc": "Utilisé pour craft le Fragment d'Amazonite",
   "item.destriummod.amazonite_fragment.desc": "Utilisé pour craft la Pépite D' Amazonite",
   "item.destriummod.amazonite_nuggets.desc": "Utilisé pour craft le Lingot D' Amazonite",
   "item.destriummod.argonide_ingot.desc": "Amazonite",
