Amazonite Nuggets Description Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -167,7 +167,7 @@
   "item.destriummod.amazonite_crumb.desc": "Utilisé pour craft le Poudre d'Amazonite",
   "item.destriummod.amazonite_dust.desc": "Utilisé pour craft le Fragment d'Amazonite",
   "item.destriummod.amazonite_fragment.desc": "Utilisé pour craft la Pépite d'Amazonite",
-  "item.destriummod.amazonite_nuggets.desc": "Utilisé pour craft le Lingot D' Amazonite",
+  "item.destriummod.amazonite_nuggets.desc": "Utilisé pour craft le Lingot d'Amazonite",
   "item.destriummod.argonide_ingot.desc": "Amazonite",
   "item.destriummod.argonide_ingot.desc2": "Destrium",
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
