Argonide Nuggets Name Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -7,7 +7,7 @@
   "item.destriummod.destrium_ingot": "Lingot De Destrium",
   "item.destriummod.destrium_nuggets": "Pépite De Destrium",
   "item.destriummod.argonide_ingot": "Lingot D' Argonide",
-  "item.destriummod.argonide_nuggets": "Pépite D' Argonide",
+  "item.destriummod.argonide_nuggets": "Pépite d'Argonide",
   
   
   "item.destriummod.amazonite_stick": "Stick En Amazonite",
