Argonide Ingot Name Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -6,7 +6,7 @@
   "item.destriummod.amazonite_crumb": "Miette d'Amazonite",
   "item.destriummod.destrium_ingot": "Lingot De Destrium",
   "item.destriummod.destrium_nuggets": "Pépite De Destrium",
-  "item.destriummod.argonide_ingot": "Lingot D' Argonide",
+  "item.destriummod.argonide_ingot": "Lingot d'Argonide",
   "item.destriummod.argonide_nuggets": "Pépite d'Argonide",
   
   
