--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -171,7 +171,7 @@
   "item.destriummod.argonide_ingot.desc": "Amazonite",
   "item.destriummod.argonide_ingot.desc2": "Destrium",
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
-  "item.destriummod.argonide_nuggets.desc": "Utilisé pour craft le Lingot D' Argonide",
+  "item.destriummod.argonide_nuggets.desc": "Utilisé pour craft le Lingot d'Argonide",
   
   
   "item.destriummod.amazonite_stick.desc": "Utilisé pour craft les Outils En Amazonite",
