Argonide Block Name Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -77,7 +77,7 @@
   "block.destriummod.amazonite_block": "Bloc d'Amazonite",
   "block.destriummod.fake_amazonite_block": "Bloc d'Amazonite",
   "block.destriummod.destrium_block": "Bloc De Destrium",
-  "block.destriummod.argonide_block": "Bloc D'Argonide",
+  "block.destriummod.argonide_block": "Bloc d'Argonide",
   
   "block.destriummod.random_ore": "Minerais Aléatoire",
   "block.destriummod.amazonite_ore": "Minerais D'Amazonite",
