--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -82,7 +82,7 @@
   "block.destriummod.random_ore": "Minerais Aléatoire",
   "block.destriummod.amazonite_ore": "Minerais D'Amazonite",
   "block.destriummod.destrium_ore": "Minerais De Destrium",
-  "block.destriummod.argonide_ore": "Minerais D'Argonide",
+  "block.destriummod.argonide_ore": "Minerais d'Argonide",
   "block.destriummod.cracked_argonide_ore": "Minerais Craquelé D'Argonide",
   
   
