Cracked Argonide Ore Name Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -83,7 +83,7 @@
   "block.destriummod.amazonite_ore": "Minerais D'Amazonite",
   "block.destriummod.destrium_ore": "Minerais De Destrium",
   "block.destriummod.argonide_ore": "Minerais d'Argonide",
-  "block.destriummod.cracked_argonide_ore": "Minerais Craquelé D'Argonide",
+  "block.destriummod.cracked_argonide_ore": "Minerais Craquelé d'Argonide",
   
   
   "block.destriummod.cobblestone_compressed1": "Pierre Compressé",
