Amazonite Ore Name Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -80,7 +80,7 @@
   "block.destriummod.argonide_block": "Bloc d'Argonide",
   
   "block.destriummod.random_ore": "Minerais Aléatoire",
-  "block.destriummod.amazonite_ore": "Minerais D'Amazonite",
+  "block.destriummod.amazonite_ore": "Minerais d'Amazonite",
   "block.destriummod.destrium_ore": "Minerais De Destrium",
   "block.destriummod.argonide_ore": "Minerais d'Argonide",
   "block.destriummod.cracked_argonide_ore": "Minerais Craquelé d'Argonide",
