Xp Seeds Name Modified

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -58,7 +58,7 @@
   
   "item.destriummod.amazonite_seeds": "Amazonite Seeds",
   "item.destriummod.destrium_seeds": "Destrium Seeds",
-  "item.destriummod.xp_seeds": "XP Seeds",
+  "item.destriummod.xp_seeds": "Xp Seeds",
   
   
   "item.destriummod.golden_core": "Golden Core",
