Compressed Cobblestone Name Modified

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -86,14 +86,14 @@
   "block.destriummod.cracked_argonide_ore": "Cracked Argonide Ore",
   
   
-  "block.destriummod.cobblestone_compressed1": "Compressed CobbleStone",
-  "block.destriummod.cobblestone_compressed2": "Compressed CobbleStone Two Times",
-  "block.destriummod.cobblestone_compressed3": "Compressed CobbleStone Three Times",
-  "block.destriummod.cobblestone_compressed4": "Compressed CobbleStone Four Times",
-  "block.destriummod.cobblestone_compressed5": "Compressed CobbleStone Five Times",
-  "block.destriummod.cobblestone_compressed6": "Compressed CobbleStone Six Times",
-  "block.destriummod.cobblestone_compressed7": "Compressed CobbleStone Seven Times",
-  "block.destriummod.cobblestone_compressed8": "Compressed CobbleStone Eight Times",
+  "block.destriummod.cobblestone_compressed1": "Compressed Cobblestone",
+  "block.destriummod.cobblestone_compressed2": "Compressed Cobblestone Two Times",
+  "block.destriummod.cobblestone_compressed3": "Compressed Cobblestone Three Times",
+  "block.destriummod.cobblestone_compressed4": "Compressed Cobblestone Four Times",
+  "block.destriummod.cobblestone_compressed5": "Compressed Cobblestone Five Times",
+  "block.destriummod.cobblestone_compressed6": "Compressed Cobblestone Six Times",
+  "block.destriummod.cobblestone_compressed7": "Compressed Cobblestone Seven Times",
+  "block.destriummod.cobblestone_compressed8": "Compressed Cobblestone Eight Times",
   
   "block.destriummod.dirt_compressed1": "Compressed Dirt",
   "block.destriummod.dirt_compressed2": "Compressed Dirt Two Times",
