--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -183,7 +183,7 @@
   "item.destriummod.destrium_stick.desc": "Used to craft the Destrium Tools",
   "item.destriummod.argonide_stick.desc": "Used to craft the Argonide Tools",
   
-  "item.destriummod.golden_core.desc": "Used to craft the Noth Apple",
+  "item.destriummod.golden_core.desc": "Used to craft the Enchanted Golden Apple",
   "item.destriummod.compressed_golden.desc": "Used to craft the Golden Core",
   
   
