Plants Name Fr Added

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -129,6 +129,11 @@
   "block.destriummod.cracked_cloud": "Nuage Craquelé",
   
   
+  "block.destriummod.amazonite_plants": "Plantation d'Amazonite",
+  "block.destriummod.destrium_plants": "Plantation De Destrium",
+  "block.destriummod.xp_plants": "Plantation d'Xp",
+  
+  
   "block.destriummod.amazonite_relique_block": "Bloc De Relique En Amazonite",
   
   
