Amazonite Crumb/Dust/Fragment/Nuggets Description Modified

--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -170,10 +170,10 @@
   "item.destriummod.destrium_ingot.desc2": ">> Destrium",
   "item.destriummod.destrium_ingot.desc3": "Argonide",
   "item.destriummod.destrium_nuggets.desc": "Used to craft the Destrium Ingot",
-  "item.destriummod.amazonite_crumb.desc": "Used to craft the Amamzonite Dust",
-  "item.destriummod.amazonite_dust.desc": "Used to craft the Amamzonite Fragment",
-  "item.destriummod.amazonite_fragment.desc": "Used to craft the Amamzonite Nuggets",
-  "item.destriummod.amazonite_nuggets.desc": "Used to craft the Amamzonite Ingot",
+  "item.destriummod.amazonite_crumb.desc": "Used to craft the Amazonite Dust",
+  "item.destriummod.amazonite_dust.desc": "Used to craft the Amazonite Fragment",
+  "item.destriummod.amazonite_fragment.desc": "Used to craft the Amazonite Nuggets",
+  "item.destriummod.amazonite_nuggets.desc": "Used to craft the Amazonite Ingot",
   "item.destriummod.argonide_ingot.desc": "Amazonite",
   "item.destriummod.argonide_ingot.desc2": "Destrium",
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
