Spawners Pickaxe Description Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -158,7 +158,7 @@
   
   "item.destriummod.spawners_pickaxe.desc": " ",
   "item.destriummod.spawners_pickaxe.desc2": "3 Utilisation,",
-  "item.destriummod.spawners_pickaxe.desc3": "Doit avoir la Perms Achatable dans /boutique pour être utilisé",
+  "item.destriummod.spawners_pickaxe.desc3": "Doit avoir la Perms Achetable dans /boutique pour être utilisé",
   "item.destriummod.spawners_pickaxe.desc4": " ",
 
 
