Destrium Apple Description Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -187,7 +187,7 @@
   "item.destriummod.compressed_golden.desc": "Utilisé pour craft le Noyau En Or",
 
 
-  "item.destriummod.destrium_apple.desc": "Soigne De Dix Coeurs",
+  "item.destriummod.destrium_apple.desc": "Soigne Dix Coeurs",
   "item.destriummod.destrium_apple.desc2": "Force Trois Pendant Vingts Secondes",
   "item.destriummod.destrium_apple.desc3": "Résistance Deux Pendant Dix Minutes",
   "item.destriummod.destrium_apple.desc4": "Boost De Quatre Coeurs Pendant Cinq Minutes",
