Destrium Apple Description Modified

--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -192,7 +192,7 @@
   "item.destriummod.destrium_apple.desc3": "Résistance Deux Pendant Dix Minutes",
   "item.destriummod.destrium_apple.desc4": "Boost De Quatre Coeurs Pendant Cinq Minutes",
   "item.destriummod.destrium_apple.desc5": "Regeneration Trois Pendant Quarante Cinq Secondes",
-  "item.destriummod.destrium_apple.desc6": "Dix Coeurs D' Absorption Pendant Cinq Minutes",
+  "item.destriummod.destrium_apple.desc6": "Dix Coeurs d'Absorption Pendant Cinq Minutes",
   
   "item.destriummod.amazonite_apple.desc": "Soigne Tout Les Coeurs",
   "item.destriummod.amazonite_apple.desc2": "Force Quatre Pendant Quarantes Secondes",
