--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -74,6 +74,9 @@
   "item.destriummod.amazonite_plate": "Amazonite Plate",
   
   
+  "item.destriummod.poison_water_bucket": "Empoisoned Water Bucket",
+ 
+  
   
   
   "block.destriummod.amazonite_block": "Amazonite Block",
@@ -140,6 +143,11 @@
   
   
   "block.destriummod.below_block": "Below Block",
+  
+  
+  
+  
+  "fluid.destriummod.poison_water": "Empoisoned Water",
   
 
 
