--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -75,6 +75,7 @@
   
   
   "item.destriummod.poison_water_bucket": "Empoisoned Water Bucket",
+  "item.destriummod.poison_star": "Poison Star",
  
   
   
