--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -75,6 +75,7 @@
   
   
   "item.destriummod.poison_water_bucket": "Seaux d'Eau Empoisonné",
+  "item.destriummod.poison_star": "Etoile de Poison",
   
   
   
