--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -74,6 +74,8 @@
   "item.destriummod.amazonite_plate": "Amazonite Plate",
   
   
+  "item.destriummod.infinity_water_bucket": "Infinity Water Bucket",
+  
   "item.destriummod.poison_water_bucket": "Empoisoned Water Bucket",
   "item.destriummod.poison_star": "Poison Star",
  
