--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -74,6 +74,8 @@
   "item.destriummod.amazonite_plate": "Plaque d'Amazonite",
   
   
+  "item.destriummod.infinity_water_bucket": "Seaux d'Eau Infini",
+  
   "item.destriummod.poison_water_bucket": "Seaux d'Eau Empoisonné",
   "item.destriummod.poison_star": "Etoile de Poison",
   
