--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -79,6 +79,8 @@
   "item.destriummod.poison_water_bucket": "Seaux d'Eau Empoisonné",
   "item.destriummod.poison_star": "Etoile de Poison",
   
+  "item.destriummod.resistance_star": "Resistance Star",
+  
   
   
   
