--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -78,6 +78,8 @@
   
   "item.destriummod.poison_water_bucket": "Empoisoned Water Bucket",
   "item.destriummod.poison_star": "Poison Star",
+  
+  "item.destriummod.resistance_star": "Resistance Star",
  
   
   
