--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -79,6 +79,7 @@
   "item.destriummod.poison_water_bucket": "Empoisoned Water Bucket",
   "item.destriummod.poison_star": "Poison Star",
   
+  "item.destriummod.resistance_lava_bucket": "Resistance Lava Bucket",
   "item.destriummod.resistance_star": "Resistance Star",
  
   
