--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -79,7 +79,8 @@
   "item.destriummod.poison_water_bucket": "Seaux d'Eau Empoisonné",
   "item.destriummod.poison_star": "Etoile de Poison",
   
-  "item.destriummod.resistance_star": "Resistance Star",
+  "item.destriummod.resistance_lava_bucket": "Seaux de Lave Résistante",
+  "item.destriummod.resistance_star": "Etoile de Résistance",
   
   
   
