--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -9,6 +9,9 @@
   "item.destriummod.argonide_ingot": "Argonide Ingot",
   "item.destriummod.argonide_nuggets": "Argonide Nuggets",
   
+  "item.destriummod.diamond_nuggets": "Diamond Nuggets",
+  "item.destriummod.netherite_nuggets": "Netherite Nuggets",
+  
   
   "item.destriummod.amazonite_stick": "Amazonite Stick",
   "item.destriummod.destrium_stick": "Destrium Stick",
@@ -195,6 +198,9 @@
   "item.destriummod.argonide_ingot.desc2": "Destrium",
   "item.destriummod.argonide_ingot.desc3": ">> Argonide",
   "item.destriummod.argonide_nuggets.desc": "Used to craft the Argonide Ingot",
+  
+  "item.destriummod.diamond_nuggets.desc": "Used to craft the Diamond",
+  "item.destriummod.netherite_nuggets.desc": "Used to craft the Netherite Scrap",
   
   
   "item.destriummod.amazonite_stick.desc": "Used to craft the Amazonite Tools",
