--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.destriummod.argonide_ingot": "Argonide Ingot",
   "item.destriummod.argonide_nuggets": "Argonide Nuggets",
   
+  "item.destriummod.emerald_nuggets": "Emerald Nuggets",
   "item.destriummod.diamond_nuggets": "Diamond Nuggets",
   "item.destriummod.netherite_nuggets": "Netherite Nuggets",
   
