--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -9,6 +9,7 @@
   "item.destriummod.argonide_ingot": "Lingot d'Argonide",
   "item.destriummod.argonide_nuggets": "Pépite d'Argonide",
   
+  "item.destriummod.emerald_nuggets": "Pépite d'Emeraude",
   "item.destriummod.diamond_nuggets": "Pépite de Diamants",
   "item.destriummod.netherite_nuggets": "Pépite de Netherite",
   
