--- a/src/main/resources/assets/destriummod/lang/fr_fr.json
+++ b/src/main/resources/assets/destriummod/lang/fr_fr.json
@@ -117,6 +117,10 @@
   "block.destriummod.dirt_compressed5": "Terre Compressé Cinq Fois",
   
   
+  "block.destriummod.paradis_portal_block": "Portail pour le Paradis",
+  "block.destriummod.overworld_portal_block": "Portail pour l'Overworld",
+  
+  
   "block.destriummod.cloud": "Nuage",
   "block.destriummod.black_cloud": "Nuage Noire",
   "block.destriummod.blue_cloud": "Nuage Bleu",
