--- a/src/main/resources/assets/destriummod/lang/en_us.json
+++ b/src/main/resources/assets/destriummod/lang/en_us.json
@@ -183,8 +183,8 @@
   
   
   "item.destriummod.spawners_pickaxe.desc": " ",
-  "item.destriummod.spawners_pickaxe.desc2": "Three Use,",
-  "item.destriummod.spawners_pickaxe.desc3": "Must have bought the Perms in /boutique to be used",
+  "item.destriummod.spawners_pickaxe.desc2": "Don't Craft",
+  "item.destriummod.spawners_pickaxe.desc3": "Doesn't Work",
   "item.destriummod.spawners_pickaxe.desc4": " ",
   
   
